# corespot

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
cmake/: conan.cmake
include/spot/: algorithm.h  handle.h  hash.h  log.h
src/: log.cc
test/: CMakeLists.txt
test/src/: algorithm.cc  handle.cc  log.cc
